--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 NODE_ENV=production
-VUE_APP_BASE_URL=https://ngwho-data.herokuapp.com
+VUE_APP_BASE_URL=https://demo-childbirth-survey.herokuapp.com
