--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "chartist": "0.11.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
